Backend avec Spring Boot et Messagerie Broker RabbitMQ 0.9.1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=MobileApp-Backend
 spring.data.mongodb.uri=mongodb://localhost:27017/db_Mobile_App
 
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=root
+spring.rabbitmq.password=root
+
+
