--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=MobileApp-Backend
-spring.data.mongodb.uri=mongodb://localhost:27017/db_Mobile_App
+#
+spring.data.mongodb.uri=mongodb+srv://root:I5dbfroREWtwjQZD@cluster0.5wj8g.mongodb.net/db_Mobile_App
 
 
 
-spring.rabbitmq.host=localhost
+
+spring.rabbitmq.host=100.88.97.206
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=root
 spring.rabbitmq.password=root
