--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,17 +13,17 @@ services:
       RABBITMQ_DEFAULT_PASS: root
 
 
-  mongodb:
-    image: 'mongo:latest'
-    environment:
-      - 'MONGO_INITDB_DATABASE=db_Mobile_App'
-      - 'MONGO_INITDB_ROOT_USERNAME=root'
-      - 'MONGO_INITDB_ROOT_PASSWORD=root'
-
-    ports:
-      - '27017:27017'
-
-    volumes:
-      - './db_Mobile_Data:/data/db'
+#  mongodb:
+#    image: 'mongo:latest'
+#    environment:
+#      - 'MONGO_INITDB_DATABASE=db_Mobile_App'
+#      - 'MONGO_INITDB_ROOT_USERNAME=root'
+#      - 'MONGO_INITDB_ROOT_PASSWORD=root'
+#
+#    ports:
+#      - '27017:27017'
+#
+#    volumes:
+#      - './db_Mobile_Data:/data/db'
 
 
